--- a/template.yaml
+++ b/template.yaml
@@ -19,7 +19,7 @@ Resources:
         SnippetExtractor:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /extract
+            Path: /extract_snippet
             Method: get
     Metadata:
       DockerTag: ruby2.7-v1
