--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -14,15 +14,15 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+        uses: ruby/setup-ruby@a699edbce608a2c128dedad88e3b6a0e28687b3c
         with:
-          ruby-version: 2.5.8
+          ruby-version: 2.6.6
 
       - name: Install gems
         run: |
-          gem install rubocop
-          gem install rubocop-minitest
-          gem install rubocop-performance
+          gem install rubocop -v 1.7.0
+          gem install rubocop-minitest -v 0.11.0
+          gem install rubocop-performance -v 1.10.1
 
       - name: Run Rubocop
         run: rubocop --except Metrics
