--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,18 @@
-name: Push Docker images to DockerHub and ECR and deploy to AWS
+name: Deploy to AWS
 
 on:
   push:
     branches:
       - main
-  pull_request:
   workflow_dispatch:
 
-permissions:
-  contents: write
+permissions: {}
 
 jobs:
   build-and-push-image:
     uses: exercism/github-actions/.github/workflows/docker-build-push-image.yml@main
+    permissions:
+      contents: write
     secrets:
       AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
       AWS_REGION: ${{secrets.AWS_REGION}}
@@ -22,7 +22,8 @@ jobs:
       DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
 
   deploy-lambda:
-    uses: exercism/github-actions/.github/workflows/deploy-lambda.yml@workflow-lambda
+    uses: exercism/github-actions/.github/workflows/deploy-lambda.yml@main
+    needs: build-and-push-image
     with:
       function_name: snippet_extractor
     secrets:
@@ -30,5 +31,3 @@ jobs:
       AWS_REGION: ${{secrets.AWS_REGION}}
       AWS_ECR_ACCESS_KEY_ID: ${{secrets.AWS_LAMBDA_ACCESS_KEY_ID}}
       AWS_ECR_SECRET_ACCESS_KEY: ${{secrets.AWS_LAMBDA_SECRET_ACCESS_KEY}}
-      DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
-      DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
