--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,9 @@ Layout/MultilineMethodCallIndentation:
 Layout/EmptyLinesAroundAccessModifier:
   EnforcedStyle: only_before
 
+Layout/TrailingWhitespace:
+  AllowInHeredoc: true
+
 Lint/SuppressedException:
   Exclude:
     - "test/**/*"
