--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -25,9 +25,11 @@ jobs:
           # Extract the exact versions of the rubocop gems from Gemfile.lock
           rubocop_version=$(sed -n -E 's/^    rubocop \((.+)\)/\1/p' Gemfile.lock)
           rubocop_performance_version=$(sed -n -E 's/^    rubocop-performance \((.+)\)/\1/p' Gemfile.lock)
+          rubocop_minitest_version=$(sed -n -E 's/^    rubocop-minitest \((.+)\)/\1/p' Gemfile.lock)
 
           gem install rubocop -v $rubocop_version
           gem install rubocop-performance -v $rubocop_performance_version
+          gem install rubocop-minitest -v $rubocop_minitest_version
 
       - name: Run Rubocop
         run: rubocop --except Metrics
