Use test branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ permissions: {}
 
 jobs:
   build-and-push-image:
-    uses: exercism/github-actions/.github/workflows/docker-build-push-image.yml@main
+    uses: exercism/github-actions/.github/workflows/docker-build-push-image.yml@provide-image-name
     permissions:
       contents: write
     with:
@@ -24,7 +24,7 @@ jobs:
       DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
 
   deploy-lambda:
-    uses: exercism/github-actions/.github/workflows/deploy-lambda.yml@main
+    uses: exercism/github-actions/.github/workflows/deploy-lambda.yml@provide-image-name
     needs: build-and-push-image
     with:
       function_name: snippet_extractor
